bugs squish, new feature, new wiki
1. Fixed some bugs with the wiki template page not updating properly.
2. When mods are separated during search if a game has no more mods left in the list then the mods accordion will be hidden.
3. Added the Infernum Mod's wiki

--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ button:hover {
     outline-color: #a26f29
 }
 
+.mods-box>.mods>.mods-content>.mods-box {
+    outline-style: solid;
+    outline-color: #a26f29;
+}
+
 #wikiSearch,
 .options {
     display: -webkit-inline-box;
